bookinfo/reviews/cluster-b/reviews.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews
        version: v1
    spec:
      containers:
      - name: reviews
        image: zackbutcher/examples-bookinfo-reviews-v1:1
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews
        version: v2
    spec:
      containers:
      - name: reviews
        image: zackbutcher/examples-bookinfo-reviews-v2:1
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-v3
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews
        version: v3
    spec:
      containers:
      - name: reviews
        image: zackbutcher/examples-bookinfo-reviews-v3:1
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  gateways:
  - ingress-gateway
  - mesh
  hosts:
  - reviews.svc.b.remote
  http:
  - match:
    - uri:
        prefix: /reviews
    route:
    # by default we'll round-robin across the versions
    - destination:
        host: reviews
        port:
          number: 9080
      weight: 100
